<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_col"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <RadioGroup
        android:id="@+id/difficulty_radio"
        android:layout_width="165dp"
        android:layout_height="242dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="254dp"
        android:orientation="vertical"
        android:visibility="visible">

        <RadioButton
            android:id="@+id/radioEasy"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingBottom="5sp"
            android:text="@string/radio_easy"
            android:textSize="20sp" />


        <RadioButton
            android:id="@+id/radioMedium"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/radio_medium"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioHard"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/radio_hard"
            android:textSize="20sp" />


    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioMusic"
        android:layout_width="142dp"
        android:layout_height="246dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="260dp"
        android:layout_marginTop="251dp"
        android:orientation="vertical"
        android:visibility="visible">

        <RadioButton
            android:id="@+id/radioButtonOn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingBottom="5sp"
            android:text="@string/radio_music_on"
            android:textSize="20sp" />


        <RadioButton
            android:id="@+id/radioButtonOff"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/radio_music_off"
            android:textSize="20sp" />


    </RadioGroup>

    <TextView
        android:id="@+id/settingsDifficlty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="204dp"
        android:text="@string/settings_difficulty"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/settingsSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/settingsDifficlty"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="81dp"
        android:text="@string/settings_sound"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="122dp"
        android:layout_height="57dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="163dp"
        android:text="@string/settings_save_button"
        />


</RelativeLayout>