<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_Highscore"
        android:layout_width="151dp"
        android:layout_height="57dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="520dp"
        android:text="@string/highscore" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="151dp"
        android:layout_height="57dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:text="@string/play_button" />

    <EditText
        android:id="@+id/input_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="146dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:text="@string/username"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/settings"
        android:layout_width="38dp"
        android:layout_height="36dp"
        android:layout_below="@+id/button_Highscore"
        android:layout_alignParentStart="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/settings" />

    <Button
        android:id="@+id/button_info"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_below="@+id/button_Highscore"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="154dp"
        android:background="@drawable/info" />


</RelativeLayout>